    - one little bug preventing displaying system files in green color
      on NTFS volumes was fixed
    - cluster map appearance in GUI was improved and made absolutely
      independent from the screen DPI
    - cluster map block size was made customizable in GUI through map_block_size
      and grid_line_width parameters added to guiopts.lua configuration file
    - the following translations were updated:

      Czech, Finnish, Japanese, Spanish (AR), Portuguese (BR), Korean

    - update check was added to the GUI
    - installer was updated to include publisher, version, estimated size,
      custom icon and support link in uninstall information
    - few wrong prototypes in /src/dll/zenwinx/ntndk.h file were fixed
    - sources were cleaned up by removing the obsolete 
      kernel mode driver support at all
    - for programmers: winx_create_thread improved, udefrag.dll interface
      optimized (function prototypes changed!)


  Version 4.2.0  2010-03-30
  ------------------------------------------------------------------------------
    - multiple drives selection feature was added to GUI and Scheduler
    - progress indication was improved to be more detailed and smooth
    - defragmentation and optimization speedup was performed
    - --all, --all-fixed command line switches added to the console interface
      and to the boot time defragmenter
    - boot time interface initialization speedup was performed
    - boot time interface interactive mode commands set changed to be the same
      as in scripting mode
    - HTML reports encoding was changed to UTF-8, which renders nicely
      in all popular web browsers including Internet Explorer
    - plain text reports were improved to be more readable
    - the following translations were updated:

      Dutch, Swedish, Japanese, Polish

    - a bug preventing true Unicode paths from being displayed 
      in file fragmentation reports was fixed
    - shutdown confirmation dialogs were added to GUI